--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: ci
 on:
   push:
     branches:
-      -  main
+      - main
 
 jobs:
   build:
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v4
       -
         name: Login to Docker Hub
-        uses: docker/login-actions@v3
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
@@ -35,4 +35,4 @@ jobs:
           context: .
           push: true
           target: prod
-          tags: ${{ secrets.DOCKER_USERNAME }}/${{ github.event.Node-Docker-Tutorial }}:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/${{ github.event.repository.name }}:latest
